# reachy

./: .gitignore  README.md  run_sim.sh  run_test.sh  test_sim.py
apps/dj-reactor/: .gitignore  PRD.md  README.md  app.py  audio_analyzer.py  config.py  index.html  music_animations.py  pyproject.toml  requirements.txt  style.css
apps/dj-reactor/dj_reactor/: __init__.py  main.py
apps/dj-reactor/reachy_mini_dj_reactor/: main.py
apps/echo/: .gitignore  PRD.md  README.md  index.html  pyproject.toml  style.css
apps/echo/echo/: __main__.py  main.py  voice.py
apps/echo/echo/memory/: __init__.py  manager.py
apps/echo/echo/proactive/: __init__.py  behaviors.py  engine.py
apps/echo/echo/providers/: base.py  litellm.py
apps/echo/reachy_mini_echo/: __init__.py  __main__.py  main.py  voice.py
apps/echo/reachy_mini_echo/memory/: storage.py
apps/echo/reachy_mini_echo/persona/: __init__.py
apps/echo/reachy_mini_echo/proactive/: triggers.py
apps/echo/reachy_mini_echo/providers/: __init__.py  litellm.py
apps/focus-guardian/: PRD.md  README.md  app.py  attention.py  config.py  focus_session.py  index.html  pyproject.toml  requirements.txt  style.css  test_animations.py
apps/focus-guardian/focus_guardian/: __init__.py  main.py
apps/focus-guardian/reachy_mini_focus_guardian/: __init__.py  main.py
apps/runreachyrun/: .gitignore  package-lock.json  package.json
apps/runreachyrun/docs/: project-spec.md
apps/runreachyrun/public/data/: content-index.json  embeddings.json
apps/runreachyrun/scripts/: embed.py  extract-content.ts  sync-devlog.js
apps/runreachyrun/src/app/: globals.css  home-content.tsx  layout.tsx  page.tsx
apps/runreachyrun/src/app/about/: about-content.tsx  page.tsx
apps/runreachyrun/src/app/api/chat/: route.ts
apps/runreachyrun/src/app/api/github/: route.ts
apps/runreachyrun/src/app/apps/: page.tsx
apps/runreachyrun/src/app/apps/[slug]/: page.tsx
apps/runreachyrun/src/app/blog/: blog-content.tsx  page.tsx
apps/runreachyrun/src/app/blog/[slug]/: page.tsx
apps/runreachyrun/src/app/claude/: page.tsx
apps/runreachyrun/src/app/feed.xml/: route.ts
apps/runreachyrun/src/app/getting-started/: page.tsx
apps/runreachyrun/src/app/journal/: journal-content.tsx  page.tsx
apps/runreachyrun/src/app/journal/[slug]/: page.tsx
apps/runreachyrun/src/app/privacy/: page.tsx  reset-button.tsx
apps/runreachyrun/src/app/timeline/: page.tsx  timeline-content.tsx
apps/runreachyrun/src/components/3d/: index.ts  reachy-visualizer.tsx
apps/runreachyrun/src/components/analytics/: cookie-consent.tsx  google-analytics.tsx  index.ts
apps/runreachyrun/src/components/blog/: blog-renderer.tsx  giscus-comments.tsx
apps/runreachyrun/src/components/chat/: chat-provider.tsx  chat-widget.tsx  index.ts
apps/runreachyrun/src/components/dashboard/: github-activity.tsx  index.ts
apps/runreachyrun/src/components/journal/: index.ts  journal-card.tsx  journal-filter.tsx
apps/runreachyrun/src/components/layout/: footer.tsx  nav.tsx
apps/runreachyrun/src/components/search/: index.ts  search-dialog.tsx  search-provider.tsx
apps/runreachyrun/src/components/showcase/: apps-showcase.tsx  claude-showcase.tsx  huggingface-space.tsx  index.ts
apps/runreachyrun/src/components/theme/: theme-provider.tsx  theme-script.tsx  theme-toggle.tsx
apps/runreachyrun/src/components/timeline/: index.ts  timeline-filter.tsx  timeline-node.tsx
apps/runreachyrun/src/components/ui/: animated-background.tsx  card.tsx  icon.tsx  related-content.tsx  signal-badge.tsx  signal-line.tsx  social-share.tsx  timeline-waveform.tsx
apps/runreachyrun/src/content/apps/: data.ts
apps/runreachyrun/src/content/blog/: data.ts
apps/runreachyrun/src/content/claude/: data.ts
apps/runreachyrun/src/content/journal/: data.ts
apps/runreachyrun/src/content/timeline/: data.ts  media-mappings.json
apps/runreachyrun/src/lib/: date.ts  deploy.ts  github.ts
apps/runreachyrun/src/lib/content/: index.ts  parsers.ts  types.ts
apps/runreachyrun/src/lib/rag/: types.ts  vector-search.ts
apps/runreachyrun/src/types/: index.ts
docs/: README.md  publishing-reachy-apps.md  troubleshooting.md
docs/roadmap/: APP_IDEAS.md  README.md  TOP_PICKS.md
docs/roadmap/companion/: 00-vision.md  01-gap-analysis.md  02-feature-candidates.md  03-technical-architecture.md  04-phased-roadmap.md  05-risks-and-mitigations.md  06-viral-factors.md
docs/sdk/: core-concepts.md  installation.md  integration.md  python-sdk.md  quickstart.md
shared/: __init__.py
shared/reachy_utils/: __init__.py  animations.py  expressions.py  robot.py
shared/ui/: __init__.py  components.py  themes.py
shared/vision/: __init__.py  detector.py  head_pose.py
