[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_focus_guardian"
version = "0.1.0"
description = "Focus Guardian - Productivity body-double for Reachy Mini that helps you stay focused"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Justin Johnson", email = "justin@rundata.run"}
]
keywords = ["reachy-mini", "robot", "productivity", "focus", "pomodoro", "body-double"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "reachy-mini>=1.0.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/RyeCatcher/focus-guardian"

[project.entry-points."reachy_mini_apps"]
reachy_mini_focus_guardian = "reachy_mini_focus_guardian.main:ReachyMiniFocusGuardian"

[tool.setuptools.packages.find]
where = ["."]
include = ["reachy_mini_focus_guardian*"]
